Fixed z-index ordering

--- a/src/assets/layout/styles/layout/sidebar/_sidebar_horizontal.scss
+++ b/src/assets/layout/styles/layout/sidebar/_sidebar_horizontal.scss
@@ -6,7 +6,7 @@
                 height: 3rem;
                 top: 4rem;
                 position: fixed;
-                z-index: 999;
+                z-index: 998;
                 overflow: visible;
                 flex-direction: row;
                 padding: 0 2rem;
