--- a/src/assets/layout/styles/layout/sidebar/_sidebar_slim.scss
+++ b/src/assets/layout/styles/layout/sidebar/_sidebar_slim.scss
@@ -4,7 +4,7 @@
             .layout-sidebar {
                 width: 5rem;
                 overflow: visible;
-                z-index: 999;
+                z-index: 998;
 
                 .layout-menu-container {
                     overflow: visible;
